Bug 477439 - Skanpage crashes when clicking save all while a page is still being processed
Summary: Skanpage crashes when clicking save all while a page is still being processed
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-11-23 21:54 UTC by MBR
Modified: 2024-03-22 13:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MBR 2023-11-23 21:54:06 UTC
Application: skanpage (23.08.3)

Qt Version: 5.15.11
Frameworks Version: 5.112.0
Operating System: Linux 6.6.2-1-default x86_64
Windowing System: X11
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.27.9 [KCrashBackend]

-- Information about the crash:
When using high scan resolutions and clicking on the save all button while a page is still being process a segfault occurs

The crash can be reproduced every time.

-- Backtrace:
Application: Skanpage (skanpage), signal: Segmentation fault

[KCrash Handler]
#4  0x0000561f4fafa5ed in DocumentSaver::printPage(QPdfWriter&, QPainter&, SkanpageUtils::PageProperties const&, bool) ()
#5  0x0000561f4faf9b93 in DocumentSaver::savePDF(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType) ()
#6  0x0000561f4faf9869 in DocumentSaver::saveDocument(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&) ()
#7  0x0000561f4fb13eb3 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1, 2, 3>, QtPrivate::List<QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&>, void, void (DocumentSaver::*)(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&)>::call(void (DocumentSaver::*)(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&), DocumentSaver*, void**) ()
#8  0x0000561f4fb1362c in void QtPrivate::FunctionPointer<void (DocumentSaver::*)(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&)>::call<QtPrivate::List<QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&>, void>(void (DocumentSaver::*)(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&), DocumentSaver*, void**) ()
#9  0x0000561f4fb12d2d in QtPrivate::QSlotObject<void (DocumentSaver::*)(QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&), QtPrivate::List<QUrl const&, QList<SkanpageUtils::PageProperties> const&, SkanpageUtils::FileType, QString const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) ()
#10 0x00007f7f13718f50 in QObject::event (this=0x561f50f9b2b0, e=0x561f52cc40a0) at kernel/qobject.cpp:1347
#11 0x00007f7f143a519e in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x561f50f9b2b0, e=0x561f52cc40a0) at kernel/qapplication.cpp:3640
#12 0x00007f7f136ed198 in QCoreApplication::notifyInternal2 (receiver=0x561f50f9b2b0, event=0x561f52cc40a0) at kernel/qcoreapplication.cpp:1064
#13 0x00007f7f136ed35e in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1462
#14 0x00007f7f136f0791 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x561f512c06c0) at kernel/qcoreapplication.cpp:1821
#15 0x00007f7f136f0cd8 in QCoreApplication::sendPostedEvents (receiver=<optimized out>, event_type=<optimized out>) at kernel/qcoreapplication.cpp:1680
#16 0x00007f7f137468c3 in postEventSourceDispatch (s=0x7f7ee0000ee0) at kernel/qeventdispatcher_glib.cpp:277
#17 0x00007f7f11e66f30 in ?? () from /lib64/libglib-2.0.so.0
#18 0x00007f7f11e68b58 in ?? () from /lib64/libglib-2.0.so.0
#19 0x00007f7f11e6920c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#20 0x00007f7f137460d6 in QEventDispatcherGlib::processEvents (this=0x7f7ee0000b70, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#21 0x00007f7f136ebc2b in QEventLoop::exec (this=this@entry=0x7f7eebffeb00, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#22 0x00007f7f13502f6e in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#23 0x00007f7f1350419d in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#24 (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#25 QThreadPrivate::start (arg=0x561f50f9b308) at thread/qthread_unix.cpp:310
#26 0x00007f7f12c8ff44 in start_thread () from /lib64/libc.so.6
#27 0x00007f7f12d184cc in clone3 () from /lib64/libc.so.6

Thread 6 (Thread 0x7f7ef89ff6c0 (LWP 6548) "skanpage:shlo0"):
#1  0x00007f7f12c8f230 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f7f05ed1feb in cnd_wait (mtx=0x561f510325e8, cond=0x561f51032610) at ../src/c11/impl/threads_posix.c:135
#3  util_queue_thread_func (input=input@entry=0x561f510baa40) at ../src/util/u_queue.c:290
#4  0x00007f7f05f1b8e7 in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#5  0x00007f7f12c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f7f12d184cc in clone3 () from /lib64/libc.so.6

Thread 5 (Thread 0x7f7f04dfd6c0 (LWP 6547) "skanpage:sh0"):
#1  0x00007f7f12c8f230 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f7f05ed1feb in cnd_wait (mtx=0x561f51032440, cond=0x561f51032468) at ../src/c11/impl/threads_posix.c:135
#3  util_queue_thread_func (input=input@entry=0x561f510ba990) at ../src/util/u_queue.c:290
#4  0x00007f7f05f1b8e7 in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#5  0x00007f7f12c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f7f12d184cc in clone3 () from /lib64/libc.so.6

Thread 4 (Thread 0x7f7f055fe6c0 (LWP 6546) "skanpag:disk$0"):
#1  0x00007f7f12c8f230 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libc.so.6
#2  0x00007f7f05ed1feb in cnd_wait (mtx=0x561f510ba5b0, cond=0x561f510ba5d8) at ../src/c11/impl/threads_posix.c:135
#3  util_queue_thread_func (input=input@entry=0x561f510bb3c0) at ../src/util/u_queue.c:290
#4  0x00007f7f05f1b8e7 in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#5  0x00007f7f12c8ff44 in start_thread () from /lib64/libc.so.6
#6  0x00007f7f12d184cc in clone3 () from /lib64/libc.so.6

Thread 3 (Thread 0x7f7f05dff6c0 (LWP 6545) "skanpage:cs0"):
#1  0x00007f7f1350619b in QtLinuxFutex::_q_futex (val3=0, addr2=0x0, val2=0, val=<optimized out>, op=0, addr=<optimized out>) at thread/qfutex_p.h:114
#2  QtLinuxFutex::futexWait<QBasicAtomicInteger<unsigned int> > (expectedValue=<optimized out>, futex=...) at thread/qfutex_p.h:133
#3  futexSemaphoreTryAcquire_loop<false> (timeout=-1, nn=8589934593, curValue=<optimized out>, u=...) at thread/qsemaphore.cpp:219
#4  futexSemaphoreTryAcquire<false> (timeout=-1, n=n@entry=1, u=...) at thread/qsemaphore.cpp:262
#5  QSemaphore::acquire (this=this@entry=0x7f7f05dfe610, n=n@entry=1) at thread/qsemaphore.cpp:326
#6  0x00007f7f13725191 in doActivate<false> (sender=0x561f5237e870, signal_index=0, argv=0x7f7f05dfe690) at kernel/qobject.cpp:3906
#7  0x00007f7f1371e0af in QMetaObject::activate (sender=sender@entry=0x561f5237e870, m=m@entry=0x7f7f139bf840 <QObject::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7f7f05dfe690) at kernel/qobject.cpp:3985
#8  0x00007f7f1371e15f in QObject::destroyed (this=this@entry=0x561f5237e870, _t1=<optimized out>, _t1@entry=0x561f5237e870) at .moc/moc_qobject.cpp:219
#9  0x00007f7f13723058 in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at kernel/qobject.cpp:1010
#10 0x00007f7f141e2349 in QDBusServiceWatcher::~QDBusServiceWatcher (this=0x561f5237e870, __in_chrg=<optimized out>) at qdbusservicewatcher.cpp:260
#11 0x00007f7f13716aee in QObjectPrivate::deleteChildren (this=this@entry=0x561f5237e7b0) at kernel/qobject.cpp:2137
#12 0x00007f7f13722de4 in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at kernel/qobject.cpp:1115
#13 0x00007f7f15926729 in (anonymous namespace)::Q_QGS_s_instance::innerFunction()::Holder::~Holder() () at /usr/src/debug/kglobalaccel-5.112.0/src/kglobalaccel.cpp:208
#14 0x00007f7f12c41b06 in __run_exit_handlers () from /lib64/libc.so.6
#15 0x00007f7f12c41c50 in exit () from /lib64/libc.so.6
#16 0x00007f7f066a1009 in amdgpu_cs_submit_ib (job=job@entry=0x561f513b4690, gdata=gdata@entry=0x0, thread_index=thread_index@entry=0) at ../src/gallium/winsys/amdgpu/drm/amdgpu_cs.c:1747
#17 0x00007f7f05ed20aa in util_queue_thread_func (input=input@entry=0x561f5102f8e0) at ../src/util/u_queue.c:309
#18 0x00007f7f05f1b8e7 in impl_thrd_routine (p=<optimized out>) at ../src/c11/impl/threads_posix.c:67
#19 0x00007f7f12c8ff44 in start_thread () from /lib64/libc.so.6
#20 0x00007f7f12d184cc in clone3 () from /lib64/libc.so.6

Thread 2 (Thread 0x7f7f0e0826c0 (LWP 6543) "QDBusConnection"):
#1  0x00007f7f11e68aff in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007f7f11e6920c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f7f137460d6 in QEventDispatcherGlib::processEvents (this=0x7f7f08000b70, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#4  0x00007f7f136ebc2b in QEventLoop::exec (this=this@entry=0x7f7f0e081ad0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#5  0x00007f7f13502f6e in QThread::exec (this=this@entry=0x7f7f141ff060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007f7f14186517 in QDBusConnectionManager::run (this=0x7f7f141ff060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#7  0x00007f7f1350419d in operator() (__closure=<optimized out>) at thread/qthread_unix.cpp:350
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at thread/qthread_unix.cpp:287
#9  QThreadPrivate::start (arg=0x7f7f141ff060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:310
#10 0x00007f7f12c8ff44 in start_thread () from /lib64/libc.so.6
#11 0x00007f7f12d184cc in clone3 () from /lib64/libc.so.6

Thread 1 (Thread 0x7f7f10551a80 (LWP 6542) "skanpage"):
#1  0x00007f7f05ed0dd5 in sys_futex (val3=-1, addr2=0x0, timeout=0x0, val1=2, op=9, addr1=0x561f513c48bc) at ../src/util/futex.c:51
#2  futex_wait (value=2, timeout=0x0, addr=0x561f513c48bc) at ../src/util/futex.c:55
#3  do_futex_fence_wait (fence=0x561f513c48bc, timeout=false, abs_timeout=<optimized out>) at ../src/util/u_queue.c:130
#4  0x00007f7f0668c721 in si_flush_all_queues (ctx=0x561f513a7c20, fence=<optimized out>, flags=<optimized out>, force_flush=<optimized out>) at ../src/gallium/drivers/radeonsi/si_fence.c:528
#5  0x00007f7f063fa82b in tc_flush (_pipe=0x561f523bf250, fence=0x7ffc11c2a9f8, flags=1) at ../src/gallium/auxiliary/util/u_threaded_context.c:3596
#6  0x00007f7f05f84f4b in st_flush (flags=1, fence=0x7ffc11c2a9f8, st=0x561f5243c710) at ../src/mesa/state_tracker/st_cb_flush.c:63
#7  st_context_flush (st=0x561f5243c710, flags=3, fence=0x7ffc11c2a9f8, before_flush_cb=0x7f7f05ebf060 <notify_before_flush_cb(void*)>, args=0x7ffc11c2aa00) at ../src/mesa/state_tracker/st_manager.c:822
#8  0x00007f7f05ebf2b0 in dri_flush (cPriv=<optimized out>, dPriv=0x561f524527f0, flags=3, reason=<optimized out>) at ../src/gallium/frontends/dri/dri_drawable.c:537
#9  0x00007f7f0c6e9acb in loader_dri3_swap_buffers_msc.constprop.0 (draw=0x561f52452678, target_msc=0, divisor=0, remainder=0, flush_flags=<optimized out>, force_copy=false, n_rects=0, rects=0x0) at ../src/loader/loader_dri3_helper.c:1046
#10 0x00007f7f0c6ce837 in glXSwapBuffers (dpy=0x561f50e05ac0, drawable=33554454) at ../src/glx/glxcmds.c:677
#11 0x00007f7f104e31dd in QGLXContext::swapBuffers (this=0x561f5173d690, surface=0x561f51ddedf0) at qglxintegration.cpp:637
#12 0x00007f7f15216f97 in QSGGuiThreadRenderLoop::renderWindow (this=0x561f514b95b0, window=<optimized out>) at /usr/src/debug/qtdeclarative-everywhere-src-5.15.11+kde30/src/quick/scenegraph/qsgrenderloop.cpp:797
#13 0x00007f7f152a8c25 in QQuickWindow::event (this=0x561f5135bd00, e=0x7ffc11c2ad30) at /usr/src/debug/qtdeclarative-everywhere-src-5.15.11+kde30/src/quick/items/qquickwindow.cpp:1865
#14 0x00007f7f143a519e in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x561f5135bd00, e=0x7ffc11c2ad30) at kernel/qapplication.cpp:3640
#15 0x00007f7f136ed198 in QCoreApplication::notifyInternal2 (receiver=0x561f5135bd00, event=0x7ffc11c2ad30) at kernel/qcoreapplication.cpp:1064
#16 0x00007f7f136ed35e in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1462
#17 0x00007f7f13b6c0f3 in QPlatformWindow::deliverUpdateRequest (this=<optimized out>) at kernel/qplatformwindow.cpp:796
#18 QPlatformWindow::windowEvent (this=<optimized out>, event=<optimized out>) at kernel/qplatformwindow.cpp:476
#19 0x00007f7f143ac4dc in QApplication::notify (this=0x7ffc11c2b2b0, receiver=0x561f5135bd00, e=0x7ffc11c2afa0) at kernel/qapplication.cpp:2882
#20 0x00007f7f136ed198 in QCoreApplication::notifyInternal2 (receiver=0x561f5135bd00, event=0x7ffc11c2afa0) at kernel/qcoreapplication.cpp:1064
#21 0x00007f7f136ed35e in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at kernel/qcoreapplication.cpp:1462
#22 0x00007f7f137454c9 in QTimerInfoList::activateTimers (this=0x561f50f50e60) at kernel/qtimerinfo_unix.cpp:643
#23 0x00007f7f13745dac in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#24 idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:230
#25 0x00007f7f11e66f30 in ?? () from /lib64/libglib-2.0.so.0
#26 0x00007f7f11e68b58 in ?? () from /lib64/libglib-2.0.so.0
#27 0x00007f7f11e6920c in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#28 0x00007f7f137460d6 in QEventDispatcherGlib::processEvents (this=0x561f50f50ed0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#29 0x00007f7f136ebc2b in QEventLoop::exec (this=this@entry=0x7ffc11c2b1e0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#30 0x00007f7f136f40c0 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#31 0x0000561f4fafdfc0 in main ()
[Inferior 1 (process 6542) detached]

Reported using DrKonqi
Comment 1 Alexander Stippich 2024-03-17 13:18:06 UTC
Git commit 82316af03a65bd07db53654663359155816427ee by Alexander Stippich.
Committed on 17/03/2024 at 13:17.
Pushed by astippich into branch 'master'.

safeguard against nullptr while saving document

M  +16   -8    src/DocumentSaver.cpp

https://invent.kde.org/utilities/skanpage/-/commit/82316af03a65bd07db53654663359155816427ee
Comment 2 Alexander Stippich 2024-03-22 13:22:48 UTC
Git commit 290e9ab9a84b9277577cb1270e191df1d7cd648f by Alexander Stippich.
Committed on 22/03/2024 at 13:22.
Pushed by astippich into branch 'release/24.02'.

safeguard against nullptr while saving document


(cherry picked from commit 82316af03a65bd07db53654663359155816427ee)

M  +16   -8    src/DocumentSaver.cpp

https://invent.kde.org/utilities/skanpage/-/commit/290e9ab9a84b9277577cb1270e191df1d7cd648f