safeguard against nullptr while saving document

BUG: 477439